--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -7,7 +7,7 @@
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "noEmit": false,
     "composite": true,
     "strict": true,
     "noUnusedLocals": true,
