--- a/backend/src/main/resources/application-production.yml
+++ b/backend/src/main/resources/application-production.yml
@@ -39,8 +39,10 @@ app:
     access-key: ${APP_STORAGE_ACCESS_KEY:}
     secret-key: ${APP_STORAGE_SECRET_KEY:}
 
+  # CORS: defina APP_FRONTEND_URL no Render (ex: https://convivium2.onrender.com) para o front acessar a API.
   cors:
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:${APP_FRONTEND_URL:http://localhost:5173}}
+    allowed-origins:
+      - ${CORS_ALLOWED_ORIGINS:${APP_FRONTEND_URL:http://localhost:5173}}
 
   jwt:
     secret: ${JWT_SECRET}
